# ZhKeyesIM

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  Vim 命令大全.md  ZhKeyesIM.sln  build_unix.sh  build_win32.bat  安装 MySQL 8.0.md  客户端-验证码功能时序图.md  日志回调设计思路与实现方案.md  项目数据结构与接口格式总结.md
GateServer/: CMakeLists.txt  ConfigManager.h  GateServer.cpp  GateServer.h  MySqlConnPool.cpp  MySqlConnPool.h  MySqlDao.cpp  MySqlDao.h  MySqlManager.cpp  MySqlManager.h  MySqlPool.cpp  MySqlPool.h  RedisConnPool.cpp  RedisConnPool.h  RedisManager.cpp  RedisManager.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.json  const.h  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto  message_build_cmd.md  注册用户sql函数.md
GateServer/Controller/: BaseController.cpp  BaseController.h  UserController.cpp  UserController.h  VerifyController.cpp  VerifyController.h
GateServer/Service/: AuthService.cpp  AuthService.h  UserService.cpp  UserService.h  VerifyService.cpp  VerifyService.h
GateServer/controller/: BaseController.cpp  BaseController.h  UserController.cpp
GateServer/infrastructure/: MySqlConnPool.cpp  MySqlConnPool.h  MySqlDao.h  MySqlManager.cpp  MySqlManager.h  RedisManager.cpp  RedisManager.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h
GateServer/model/: LoginResult.h  RegisterResult.h  ServerResult.h  ServiceResult.h  User.h
GateServer/repository/: RedisRepository.cpp  RedisRepository.h  UserRepository.cpp  UserRepository.h
GateServer/service/: AuthService.cpp  UserService.cpp  VerifyService.h
Log/: CMakeLists.txt  Log.vcxproj  Log.vcxproj.filters  Logger.cpp  log_export.h
StatusServer/: CMakeLists.txt  StatusServer.cpp  StatusServer.h  config.json  main.cpp  message.pb.h
StatusServer/Controller/: StatusController.cpp  StatusController.h
StatusServer/Infrastructure/: MySqlConnPool.cpp  MySqlConnPool.h  MySqlDao.cpp  MySqlDao.h  MySqlManager.cpp  MySqlManager.h  RedisConnPool.h  RedisManager.cpp  RedisManager.h
StatusServer/Model/: ChatServerInfo.h
StatusServer/Repository/: ChatServerRepository.cpp  ChatServerRepository.h  TokenRepository.cpp  TokenRepository.h
StatusServer/Service/: StatusService.cpp  StatusService.h
ZhKeyesIMClient/: CMakeLists.txt  IMClient.h  LoginDlg.cpp  ZhKeyesIMClient.vcxproj  ZhKeyesIMClient.vcxproj.filters  config.json  main.cpp
ZhKeyesIMClient/Base/: UserData.cpp  UserData.h  UserSession.cpp  UserSession.h  global.cpp  global.h
ZhKeyesIMClient/IMProtocol/: BinaryReader.h  BinaryWriter.h  IMMessage.h
ZhKeyesIMClient/NetWork/: ApiRoutes.h  ChatProtocol.h  HttpManager.cpp  HttpManager.h  IMClient.cpp  IMClient.h  TcpManager.cpp  TcpManager.h
ZhKeyesIMClient/Task/: GetVerifyCodeTask.cpp  GetVerifyCodeTask.h  HttpResponseTask.cpp  HttpResponseTask.h  RecvRegisterTask.cpp  RecvRegisterTask.h  RecvResetPassTask.cpp  RecvResetPassTask.h  RecvUserLoginTask.cpp  RecvUserLoginTask.h  RecvVerifyCodeTask.cpp  RecvVerifyCodeTask.h  RegisterTask.cpp  RegisterTask.h  ReportErrorTask.cpp  ReportErrorTask.h  ReportSuccessTask.cpp  ReportSuccessTask.h  ResetPasswordTask.cpp  ResetPasswordTask.h  SearchUserTask.cpp  SearchUserTask.h  SendRegisterTask.cpp  SendRegisterTask.h  SendResetPassTask.cpp  SendResetPassTask.h  SendUserLoginTask.cpp  SendUserLoginTask.h  Task.h  TaskBuilder.cpp  TaskBuilder.h  TaskHandler.cpp  TaskHandler.h  TcpConnectTask.cpp  TcpConnectTask.h  UserLoginTask.cpp  UserLoginTask.h  VerifyCodeTask.cpp  VerifyCodeTask.h
ZhKeyesIMClient/UI/: AddUserItem.cpp  AddUserItem.h  AddUserItem.ui  ApplyFriendDialog.cpp  ApplyFriendDialog.h  ApplyFriendDialog.ui  ApplyFriendItem.cpp  ApplyFriendItem.h  ApplyFriendItem.ui  ApplyFriendList.cpp  ApplyFriendList.h  ApplyFriendPage.cpp  ApplyFriendPage.h  ApplyFriendPage.ui  BubbleFrame.cpp  BubbleFrame.h  ChatDialog.cpp  ChatDialog.h  ChatDialog.ui  ChatItemBase.cpp  ChatItemBase.h  ChatPage.cpp  ChatPage.h  ChatPage.ui  ChatUserItem.cpp  ChatUserItem.h  ChatUserItem.ui  ChatUserList.cpp  ChatUserList.h  ChatUserWidget.cpp  ChatUserWidget.h  ChatUserWidget.ui  ChatView.cpp  ChatView.h  ClickedButton.cpp  ClickedButton.h  ClickedLabel.cpp  ClickedLabel.h  ClickedOnceLabel.cpp  ClickedOnceLabel.h  (+48 more)
ZhkeyesIMServer/: CMakeLists.txt  IMServer.cpp  IMServer.h  IMSession.cpp  IMSession.h  ZhKeyesIM服务端开发指南.md  ZhkeyesIMServer.vcxproj  config.json  main.cpp
ZhkeyesIMServer/Controller/: IMBaseController.h  IMUserController.cpp  IMUserController.h
ZhkeyesIMServer/IMProtocol/: BinaryReader.h  BinaryWriter.h  IMProtocol.h
ZhkeyesIMServer/Model/: User.h
ZhkeyesIMServer/Repository/: IMUserRepository.cpp  IMUserRepository.h
ZhkeyesIMServer/Service/: IMUserService.cpp  IMUserService.h
net/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Epoll.cpp  Epoll.h  EventDispatcher.h  EventLoop.cpp  EventLoop.h  IOMultiplex.h  Poll.cpp  Poll.h  Select.cpp  Select.h  SocketUtil.cpp  TCPClient.cpp  TCPClient.h  TCPClientExample.cpp  TCPClient_README.md  TCPConnection.cpp  TCPConnection.h  TCPConnector.cpp  TCPConnector.h  TCPServer.cpp  TCPServer.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  TimerService.cpp  TimerService.h  WakeUpEventDispatcher.cpp  WakeUpEventDispatcher.h  common.h  net.vcxproj  net.vcxproj.filters  net_export.h
net/Http/: HttpClient.cpp  HttpClient.h  HttpClientSession.cpp  HttpClientSession.h  HttpCommon.h  HttpMessage.cpp  HttpMessage.h  HttpParser.cpp  HttpParser.h  HttpProtocol.cpp  HttpProtocol.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  Router.cpp  Router.h
tests/: CMakeLists.txt
tests/fixtures/: http_test_data.h
tests/integration/: test_http_flow.cpp
tests/unit/: test_http_client.cpp  (+2 more)
util/: ByteOrder.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Defer.cpp  Defer.h  JsonUtil.cpp  JsonUtil.h  Util.cpp  Util.h  WorkThreadPool.cpp  WorkThreadPool.h  util.vcxproj  util.vcxproj.filters  util_export.h
(+45 files in other folders)
